# pos-ia-eng-devops-githuapi

./: .env.example  .gitignore  Containerfile  Makefile  PROGRESS.md  README.md  alembic.ini  compose.yaml  plan.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6537c299360c_initial.py
docs/adr/: 0001-podman.md  0002-fastapi.md  0003-postgresql.md  0004-prefect.md  0005-sqlalchemy-alembic.md  0006-github-api.md
helm/github-pipeline/: Chart.yaml  values.yaml
helm/github-pipeline/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-api.yaml  ingress.yaml  mlflow.yaml  prefect.yaml  secret.yaml  service-api.yaml
src/: main.py
src/core/: config.py  logging.py
src/database/: session.py
src/integrations/github/: client.py  repositories.py  users.py
src/jobs/: transform.py
src/ml/: features.py  predict.py  train.py
src/models/: models.py
src/prefect/: flows.py  ml_flows.py
src/repositories/: pipeline_repository.py  repository_repository.py  user_repository.py
src/routers/: admin.py  ml.py  repositories.py  statistics.py  users.py
src/schemas/: ml_schemas.py  schemas.py
src/services/: pipeline_service.py
tests/integration/: conftest.py  test_api.py  test_crud.py
tests/unit/: test_health.py  test_transform.py
